@@ -36,7 +36,7 @@
 #include "WProgram.h" // shouldn't need this but arduino sometimes messes up and puts inside an #ifdef
 #endif // ARDUINO
 
-#define VERSION "D3.7.0"
+#define VERSION "D3.7.1"
 
 //-- begin features
 
@@ -584,6 +584,12 @@ extern char *g_BlankLine;
 // OnboardDisplay.m_bFlags
 #define OBDF_MONO_BACKLIGHT 0x01
 #define OBDF_AMMETER_DIRTY  0x80
+#define OBDF_UPDATE_DISABLED 0x40
+
+// OnboardDisplay::Update()
+#define OBD_UPD_NORMAL    0
+#define OBD_UPD_FORCE     1 // update even if no state transition
+#define OBD_UPD_HARDFAULT 2 // update w/ hard fault
 class OnboardDisplay 
 {
 #ifdef RED_LED_REG
@@ -604,6 +610,7 @@ class OnboardDisplay
   char m_strBuf[LCD_MAX_CHARS_PER_LINE+1];
   uint8_t m_strBufLen;
 
+  int8_t updateDisabled() { return  m_bFlags & OBDF_UPDATE_DISABLED; }
 
 public:
   OnboardDisplay();
@@ -661,7 +668,7 @@ public:
   }
   void LcdMsg(const char *l1,const char *l2);
   void LcdMsg_P(const char PROGMEM *l1,const char PROGMEM *l2);
-  void LcdSetBacklightType(uint8_t t,uint8_t update=1) { // BKL_TYPE_XXX
+  void LcdSetBacklightType(uint8_t t,uint8_t update=OBD_UPD_FORCE) { // BKL_TYPE_XXX
 #ifdef RGBLCD
     if (t == BKL_TYPE_RGB) m_bFlags &= ~OBDF_MONO_BACKLIGHT;
     else m_bFlags |= OBDF_MONO_BACKLIGHT;
@@ -696,7 +703,11 @@ public:
   int8_t AmmeterIsDirty() { return (m_bFlags & OBDF_AMMETER_DIRTY) ? 1 : 0; }
 #endif // AMMETER
 
-  void Update(int8_t force=0,uint8_t hardfault=0);
+  void DisableUpdate(int8_t on) {
+    if (on) m_bFlags |= OBDF_UPDATE_DISABLED;
+    else m_bFlags &= ~OBDF_UPDATE_DISABLED;
+  }
+  void Update(int8_t updmode=OBD_UPD_NORMAL); // OBD_UPD_xxx
 };
 
 #ifdef GFI
@@ -915,7 +926,6 @@ class J1772EVSEController {
 
   uint8_t doPost();
 #endif // ADVPWR
-  void processInputs();
   void chargingOn();
   void chargingOff();
   uint8_t chargingIsOn() { return m_bVFlags & ECVF_CHARGING_ON; }
@@ -1063,6 +1073,8 @@ public:
 
 #endif
   void ReadPilot(int *plow,int *phigh,int loopcnt=PILOT_LOOP_CNT);
+  void ProcessInputs(uint8_t nosleeptoggle);
+  void Reboot();
 };
 
 #ifdef BTN_MENU
@@ -1294,14 +1306,15 @@ public:
 class BtnHandler {
   Btn m_Btn;
   Menu *m_CurMenu;
-  uint8_t m_CurLcdMode;
+  uint8_t m_SavedLcdMode;
+
 public:
   BtnHandler();
   void init() { m_Btn.init(); }
-  void ChkBtn(int8_t notoggle=0);
+  void ChkBtn(int8_t nosleeptoggle);
   uint8_t InMenu() { return (m_CurMenu == NULL) ? 0 : 1; }
-  uint8_t GetSavedLcdMode() { return m_CurLcdMode; }
-  void SetSavedLcdMode(uint8_t mode ) { m_CurLcdMode = mode; }
+  uint8_t GetSavedLcdMode() { return m_SavedLcdMode; }
+  void SetSavedLcdMode(uint8_t mode ) { m_SavedLcdMode = mode; }
 };
 
 #endif // BTN_MENU
